@startuml
'https://plantuml.com/class-diagram

class TaskManager
class IdeGuiContext
class MainController implements ProgressListener
interface ProgressListener {
 +void onUpdateTaskProgress(Task task)
 +void onTaskAdded()
  +void onTaskRemoved()
}
class GuiProgressBarHandling

IdeGuiContext ..> GuiProgressBarHandling : instantiates
IdeGuiContext ..> TaskManager : adds instantiated task to
TaskManager ..> MainController : notifies about task updates
TaskManager <.. GuiProgressBarHandling : when close() called: removes itself from TaskManager
MainController ..> TaskManager : registers itself for updates

@enduml
